css/main.css
/* ... */
#error-page i.fa-facebook:hover, 
#coming-soon i.fa-facebook:hover{
  background-color:transparent;  
  color: #314A87;
  border-color:#314A87;
}

#error-page i.fa-twitter:hover, 
#coming-soon i.fa-twitter:hover{
  background-color:transparent;  
  color: #22BBF4;
  border-color:#22BBF4;
}

#error-page i.fa-google-plus:hover, 
#coming-soon i.fa-google-plus:hover{
  background-color:transparent;  
  color: #DD4C3B;
  border-color:#DD4C3B;
}

/*************************
******Coming Soon CSS*****
**************************/

.logo-image {
  display: block;
  text-align: center;
  margin-top: 80px;
  margin-bottom: 95px;
}

.logo-image img {
  display: inline-block;
}

#coming-soon {
  background-image: url("../images/coming-soon-bg.png");
  background-position: center top;
  background-repeat: repeat-x;
  padding: 40px 0;
  overflow: hidden;
}

#coming-soon .social-link {
  margin-top: 35px;
}

.time-count {
  display: block;
  text-align: center;
}

.time-count ul {
  padding-left: 0;
}

#countdown {
  display: block;
  max-width: 960px;
  margin: 80px auto 100px;
}


#countdown li {
  float: left;
  display: block;
  width: 25%;
  text-align: center;
  height: 254px;
  background-position: 50% 0;
  background-repeat: no-repeat;
  background-size: contain !important;
  position: relative;
  color: #fff;
}

#countdown li.angle-one {
  background-image: url(../images/coming-soon1.png);
  left: 120px;
}

#countdown li.angle-two {
  background-image: url(../images/coming-soon2.png);
  left: 40px;
}

#countdown li.angle-three {
  background-image: url(../images/coming-soon3.png);
  right: 40px;
}

#countdown li.angle-four {
  background-image: url(../images/coming-soon4.png);
  right: 120px;
}

#countdown li > span {
  font-size: 48px;
  line-height: 48px;
  font-weight: 700;
  color: #fff;
  display: inline-block;
  margin-top: 40px;
}

#countdown li.angle-two > span,
#countdown li.angle-four > span {
  margin-top: 80px;
}


#subscribe {
  background-color: #565656;
  color: #FFFFFF;
  padding: 40px 0 50px;
}

#subscribe h2 {
  color: #fff;
  text-transform: uppercase;
}

#subscribe .fa-envelope-o {
  color: #0884d5;
  margin-right: 5px;
}

#subscribe .form-control {
  background-color: transparent;
  height: 52px;
  color: #fff;
  border:2px solid #00aeef;
}

#newsletter {
  margin-top: 35px;
  position: relative;
}

#newsletter i {
  color: #0884d5;
  font-size: 36px;
  position: absolute;
  right: 12px;
  top: 7px;
}

.newsletter p {
  color: #919191;
  font-size: 12px;
  margin-top: 10px;
}

#coming-soon-footer {
  padding: 45px 0;
  line-height: 15px;
  overflow: hidden;
}

#coming-soon-footer a {
  color: #d89b4e;
}

#coming-soon-footer a:hover {
  color: #b38040
}

/*Shortcodes CSS*/
.bs-example{
  margin: 0 0 20px;
}

.panel-group{
  border: 1px solid #eee;
}
.panel-default{
  border: 0;
}
.panel-group .panel{
  border-radius: 0;
}
.panel-group .panel+.panel{
  margin-top: 0;
}

.panel-default>.panel-heading{
  background-color: transparent;
  border-top: 1px solid #eee;
}

.panel-group .panel-default:first-child>.panel-heading{
  border-top: 0;
}

.panel-default>.panel-heading+.panel-collapse .panel-body{
  border-top-color: #eee;
}


.nav-pills>li.active>a, .nav-pills>li.active>a:hover, .nav-pills>li.active>a:focus{
  background-color: #4FCCCD;
}

.tab-content {
  padding-top: 20px;
}

/*Features*/
.feature-inner{
  text-align: center;
}
.icon-wrapper{
  display: inline-block;
  background-color: #4FCCCD;
  color: #fff;
  padding: 25px;
  box-shadow: 0 0 0 5px rgba(0,0,0,.1) inset;
  -webkit-box-shadow: 0 0 0 5px rgba(0,0,0,.1) inset;
  border-radius: 100%;
  margin: 10px 0;
}

.image-overlay{
  position: absolute;
  top: 0;
  right: 0;
}

.full-width-divider {
  background-color: #4a4a4a;
  color: white;
}

.full-width-divider h1 {
  color: white;
}

.transbox-over {
  position: relative;
}

.transbox-over > div {
  position: absolute;
  top: 0;
  left: 0;
  background: rgba(255, 255, 255, .5);
  width: 35%;
  padding: 20px;
  height: 100%;
}

.transbox-over > div > div {
  position: absolute;
  top: calc(50% - 120px);
  left: calc(50% - 100px);
}

.transbox-over h2 {
  font-weight: bold;
  font-size: 24pt;
  margin-top: 0px;
}

.transbox-over p {
  font-size: 14pt;
}

.transbox-over a {
  border: 0;
  background-color: #82a5b5;
  color: white;
  font-weight: bold;
}

.transbox-over a:hover {
  border: 0;
  background-color: white;
  color: #4e7a8e;
  font-weight: bold;
}

.team {
  padding-bottom: 40px;
}

.team div.row {
  padding-left: 30px;
  padding-right: 30px;
}

.fadeInLeft {
  left: 16.666666666%
}

.fadeInRight {
  right: -50%;
}

.private-nav {
  position: relative;
}

.left-nav {
  position: absolute;
  top: 8%;
  left: 8%;
}

.right-nav {
  position: absolute;
  top: 8%;
  right: 6%;
}

.left-nav a, .right-nav a {
  color: #0474aa;
  font-size: 14pt;
  padding-right: 3em;
}

#services .container {
  padding: 3em;
}

#services .row {
  background-color: #f5f3f7;
  position: relative;
  border: 2px solid white;
  margin: 0;
}

#services > div {

}

#services .map-text {
  position: absolute;
  top: 0;
  right: 0;
  height: 100%;
  width: 40%;
}

#services .map-text > div {
  position: absolute;
  top: calc(50% - 160px);
  /*left: calc(50% - 100px);*/
}

#services h2 {
  font-weight: bold;
}

#services p {
  font-size: 20px;
  padding-top: 10px;
}

#services iframe {
  margin-top: 5px;
  margin-left: 5px;
}

#bandc .col-md-12 {
  padding: 0;
}

.rsvp {
  display: none;
}

.full-width-divider {
  position: relative;
}

.full-width-divider > div {
  position: absolute;
  top: 20px;
  left: 40px;
  width: 55%;
  font-size: 14pt;
  font-weight: 200;
}

.full-width-divider h2 {
  font-weight: normal;
}

.intro-image {
  position: relative;
}

.skip-intro {
  position: absolute;
  left: 30px;
  top: 30px;
}

.skip-intro a {
  color: white;
  font-size: 10pt;
  text-decoration: underline;
}

#private .row {
  position: relative;
}
/* ... */

